# nanomon

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  alerts.example.toml  docker-compose.yml  renovate.json
.github/workflows/: docker-publish.yml
src/: config.rs  main.rs
src/adapters/: mod.rs
src/adapters/docker/: client.rs  mod.rs
src/adapters/procfs/: mod.rs  parser.rs  process.rs  system.rs
src/adapters/store/: memory.rs  mod.rs
src/adapters/systemd/: mod.rs
src/adapters/webhook/: mod.rs
src/application/: alerting.rs  mod.rs  monitoring.rs
src/domain/: alert.rs  container.rs  disk.rs  host.rs  metrics.rs  mod.rs  network.rs  process.rs  resource.rs  service.rs  temperature.rs
src/interface/http/: handlers.rs  mod.rs  routes.rs
src/interface/web/static/: app.js  index.html  style.css
src/ports/: alert_sink.rs  container_source.rs  metric_store.rs  mod.rs  process_source.rs  service_source.rs  system_source.rs
