[package]
name = "nanomon"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Lightweight Docker container monitoring tool for NAS devices"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Docker client
bollard = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait
async-trait = "0.1"

# Embed static files
rust-embed = "8"

# System calls (for statvfs)
nix = { version = "0.29", features = ["fs"] }

# Futures (for stream handling)
futures = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
